--- a/tests/config.ini
+++ b/tests/config.ini
@@ -4,3 +4,11 @@ port=5365
 user=admin
 password=
 ssl=False
+
+[mssqlsrv]
+host=localhost
+port=5835
+username=admin
+password=apple
+connection_type=mssql
+database=HRDEMO
