--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -545,6 +545,21 @@ test_dataframe_value_scale:
       "Value": [ 242, 242, 242, 242 ]
     }
 
+test_dataframe_filter_for_tm1:
+  -
+    source: {
+      "A": [ "apple", "banana", "cherry", "date" ],
+      "B": [ "x", "y", "z", "w" ],
+      "Value": [ 10, 20, 30, 40 ]
+    }
+    check1: {"A": ["apple", "cherry"]}
+    check2: {"B": ["x", "y"]}
+    expected: {
+      "A": [ "apple" ],
+      "B": [ "x" ],
+      "Value": [ 10 ]
+    }
+
 # Main: tests for dataframe remapping and copy functions
 test_dataframe_find_and_replace_success:
   -
