clean up data_copy async

--- a/tests/test_integration.yaml
+++ b/tests/test_integration.yaml
@@ -85,3 +85,24 @@ test_data_copy_for_multiple_steps:
         "mapping_dimensions":{"Groups":"Groups"},
       }
     ]
+
+test_async_data_copy_intercube:
+  -
+    list_periods: ['202201', '202202', '202203', '202204', '202205', '202206', '202207', '202208', '202209', '202210']
+    data_mdx_template:
+        "
+         SELECT 
+            {[Groups].[Groups].[Total Groups],[Groups].[Groups].[Total Groups^Group_1],[Groups].[Groups].[Total Groups^Group_2],[Groups].[Groups].[Total Groups^Group_3],[Groups].[Groups].[Group_4],[Groups].[Groups].[Group_5]} 
+           ON COLUMNS , 
+            {DRILLDOWNMEMBER({[Employees].[Employees].[Total Employees]}, {[Employees].[Employees].[Total Employees]})} 
+           ON ROWS 
+         FROM [Cost and FTE by Groups] 
+         WHERE 
+           (
+            [Periods].[Periods].[$Period],
+            [Lineitems Cost and FTE by Groups].[Lineitems Cost and FTE by Groups].[Caculated Salary],
+            [Versions].[Versions].[Bedrock Input Test],
+            [Measures Cost and FTE by Groups].[Measures Cost and FTE by Groups].[Input]
+           )
+         "
+    clear_param_template: "{[Periods].[Periods].[$Period]}"
