--- a/tests/test_unit.yaml
+++ b/tests/test_unit.yaml
@@ -25,16 +25,254 @@ test_mdx_filter_to_dictionary:
     mdx_query:
       ""
 
-test_get_kwargs_dict_from_set_mdx_list:
+test_get_kwargs_dict_from_set_mdx_list_success:
   -
+    # Basic example from prompt
     set_mdx_list: [
       "{[Periods].[Periods].[2024]}",
       "{Tm1FilterbyLevel({Tm1DrillDownMember({[Versions].[All Versions]}, ALL, RECURSIVE)}, 0)}"
     ]
     expected_kwargs: {
-      "Periods": "{[Periods].[Periods].[2024]}",
-      "Versions": "{Tm1FilterbyLevel({Tm1DrillDownMember({[Versions].[All Versions]}, ALL, RECURSIVE)}, 0)}"
+      "periods": "{[Periods].[Periods].[2024]}",
+      "versions": "{Tm1FilterbyLevel({Tm1DrillDownMember({[Versions].[All Versions]}, ALL, RECURSIVE)}, 0)}"
     }
+  -
+    # Case variation and spaces in dimension name
+    set_mdx_list: [
+      "{[ Product Category ] . [ Members ] . [ All ] }",
+      "{ [TIME DIM   ].[H1].[Q1]}"
+    ]
+    expected_kwargs: {
+      "productcategory": "{[ Product Category ] . [ Members ] . [ All ] }",
+      "timedim": "{ [TIME DIM   ].[H1].[Q1]}"
+    }
+  -
+    # Underscores and numbers in dimension name
+    set_mdx_list: [
+      "{[Sales_Region].[North America]}",
+      "{[Scenario 1].[Actual]}"
+    ]
+    expected_kwargs: {
+      "sales_region": "{[Sales_Region].[North America]}",
+      "scenario1": "{[Scenario 1].[Actual]}"
+    }
+  -
+    # Mix of valid and invalid/non-matching strings
+    set_mdx_list: [
+      "{[Geography].[City].[London]}",
+      "This is just a string",
+      "{[Account].[Net Income]}",
+      "{Malformed Structure]"
+    ]
+    expected_kwargs: {
+      "geography": "{[Geography].[City].[London]}",
+      "account": "{[Account].[Net Income]}"
+    }
+  -
+    # Duplicate keys (after normalization) - last one should win
+    set_mdx_list: [
+      "{[ Measures ].[Sales Amount]}",
+      "{[ Measures].[Units Sold]}" # This should overwrite the previous "measures"
+    ]
+    expected_kwargs: {
+      "measures": "{[ Measures].[Units Sold]}"
+    }
+  -
+    # Duplicate keys (after normalization, different original case/spacing) - last one should win
+    set_mdx_list: [
+      "{[department].[HR]}",
+      "{[ Department ].[Finance]}" # This should overwrite the previous "department"
+    ]
+    expected_kwargs: {
+      "department": "{[ Department ].[Finance]}"
+    }
+
+test_get_kwargs_dict_from_set_mdx_list_filtering:
+  -
+    set_mdx_list: []
+    expected_kwargs: {}
+  -
+    set_mdx_list: [
+      "Just a plain string",
+      "Another string without the pattern",
+      "12345"
+    ]
+    expected_kwargs: {}
+  -
+    set_mdx_list: [
+      "{Dimension.Member}",
+      "[Dimension].[Member]",
+      "{[ Dimension Name ]",
+      " { [ Dim ] } extra text"
+    ]
+    expected_kwargs: {
+       "dimensionname": "{[ Dimension Name ]",
+       "dim": " { [ Dim ] } extra text"
+    }
+  -
+    set_mdx_list: [
+      "{Dimension.Member}",
+      "[Dimension].[Member]",
+      "{[ Dimension Name ]",
+      "{ [ ] }",
+      "{ [ No Closing Bracket "
+    ]
+    expected_kwargs: {
+        "dimensionname": "{[ Dimension Name ]",
+        "": "{ [ ] }"
+    }
+  -
+    set_mdx_list: ["", "   "]
+    expected_kwargs: {}
+  -
+    set_mdx_list: [None, "{[ValidDim].[Value]}"]
+    expected_kwargs: {
+       "validdim": "{[ValidDim].[Value]}"
+    }
+
+test_get_dimensions_from_set_mdx_list_success:
+  -
+    mdx_sets: [
+        "{[Periods].[Periods].[2024]}",
+        "{ [Versions] .[ Actual ] }"
+      ]
+    expected_dimensions: ["Periods", "Versions"]
+  -
+    mdx_sets: [
+        "{[Time].[Year].[2023]}",
+        "invalid string",
+        "{[ Geography ].[ Continent ].[Asia]}",
+        "{[Product]}"
+      ]
+    expected_dimensions: ["Time", "Geography", "Product"]
+  -
+    mdx_sets: [
+        "{ [ Measures ] . [ Sales ] }",
+        "{ [ Measures ] . [ Units ] }"
+      ]
+    expected_dimensions: ["Measures", "Measures"]
+  -
+    mdx_sets: []
+    expected_dimensions: []
+  -
+    mdx_sets: null
+    expected_dimensions: []
+  -
+    mdx_sets: ["No Match", "Another Miss"]
+    expected_dimensions: []
+  -
+    mdx_sets: ["{[Dim1]}", null, "{[Dim2].[Hier]}", "{[ Dim 3 ]}"]
+    expected_dimensions: ["Dim1", "Dim2", "Dim 3"]
+  -
+    mdx_sets: ["{[].[Element]}", "{[ Dim4 ]}"]
+    expected_dimensions: ["Dim4"]
+
+
+test_get_dimensions_from_set_mdx_list_failure:
+  -
+    mdx_sets: "not a list"
+    expected_exception: "TypeError"
+    expected_message_part: "Expected mdx_sets to be a list"
+  -
+    mdx_sets: 123
+    expected_exception: "TypeError"
+    expected_message_part: "Expected mdx_sets to be a list"
+  -
+    mdx_sets: ["[Dim1]", 123, "[Dim3]"]
+    expected_exception: "TypeError"
+    expected_message_part: "Expected elements of mdx_sets to be strings"
+  -
+    mdx_sets: [!!binary "Ynl0ZXM=", "{[Dim2]}"]
+    expected_exception: "TypeError"
+    expected_message_part: "Expected elements of mdx_sets to be strings"
+
+
+test_generate_cartesian_product_success:
+  -
+    list_of_lists: [["a", "b"], [1, 2]]
+    expected_product: [["a", 1], ["a", 2], ["b", 1], ["b", 2]]
+  -
+    list_of_lists: [[True, False], ["x"]]
+    expected_product: [[True, "x"], [False, "x"]]
+  -
+    list_of_lists: [["one"], ["two"], ["three"]]
+    expected_product: [["one", "two", "three"]]
+  -
+    list_of_lists: [[1, 2], [], [3, 4]]
+    expected_product: []
+  -
+    list_of_lists: [["a", "b"]]
+    expected_product: [["a"], ["b"]]
+  -
+    list_of_lists: []
+    expected_product: []
+  -
+    list_of_lists: null
+    expected_product: []
+  -
+    list_of_lists: [[10], [null, 20], [30]]
+    expected_product: [[10, null, 30], [10, 20, 30]]
+
+
+test_generate_cartesian_product_failure:
+  -
+    list_of_lists: "not a list"
+    expected_exception: "TypeError"
+    expected_message_part: "Input must be a list"
+  -
+    list_of_lists: 123
+    expected_exception: "TypeError"
+    expected_message_part: "Input must be a list"
+  -
+    list_of_lists: {"a": 1}
+    expected_exception: "TypeError"
+    expected_message_part: "Input must be a list"
+  -
+    list_of_lists: [[1, 2], 3, [4, 5]]
+    expected_exception: "TypeError"
+    expected_message_part: "'int' object is not iterable"
+  -
+    list_of_lists: [["a", "b"], ["c", "d"], 100]
+    expected_exception: "TypeError"
+    expected_message_part: "'int' object is not iterable"
+  -
+    list_of_lists: [[1], [2], null, [4]]
+    expected_exception: "TypeError"
+    expected_message_part: "'NoneType' object is not iterable"
+
+
+test_generate_element_lists_from_set_mdx_list_success:
+  -
+    set_mdx_list: [
+      "{TM1FILTERBYLEVEL({DRILLDOWNMEMBER({[Periods].[Periods].[2024]}, {[Periods].[Periods].[2024]})}, 0)}",
+      "{[Versions].[Versions].[Base Plan], [Versions].[Versions].[Budget]}"
+    ]
+    expected_result: [
+      ["202401", "202402", "202403", "202404", "202405", "202406", "202407", "202408", "202409", "202410", "202411", "202412"],
+      ["Base Plan", "Budget"]
+    ]
+
+test_generate_element_lists_from_set_mdx_list_failure:
+  -
+    use_none_service: true
+    set_mdx_list: ["Query1"]
+    expected_exception: "ValueError"
+    expected_message_part: "tm1_service cannot be None"
+  -
+    use_none_service: false
+    set_mdx_list: "not a list"
+    expected_exception: "TypeError"
+    expected_message_part: "Expected set_mdx_list to be a list"
+  -
+    use_none_service: false
+    set_mdx_list: ["{[Versions].[Versions].[Base Plan], [Versions].[Versions].[Budget]}", 123]
+    expected_exception: "TypeError"
+    expected_message_part: "Expected elements of set_mdx_list to be strings"
+  -
+    use_none_service: false
+    set_mdx_list: ["MDX_FOR_INDEX_ERROR"]
+    expected_exception: "TM1pyRestException"
+    expected_message_part: "Text: '{\"error\":{\"code\":\"501\",\"message\":\"Could not create MDX Set.\"}}' - Status Code: 400 - Reason: 'Bad Request' - Headers: {'Content-Length': '79', 'Connection': 'keep-alive', 'Content-Encoding': 'gzip', 'Cache-Control': 'no-cache', 'Content-Type': 'application/json; charset=utf-8', 'OData-Version': '4.0'}"
 
 
 test_utility_float_casting_values:
