--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,11 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "TM1py",
-    "mdxpy",
-    "pandas",
-    "json_logging",
-    "sqlalchemy"
+    "TM1py==2.1",
+    "pandas==2.2.3",
+    "json_logging==1.3.0",
+    "numpy==2.2.3",
+    "sqlalchemy==2.0.39"
 ]
 
 [project.optional-dependencies]
