--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -1,70 +1,52 @@
-name: Test and Build Pipeline
-
+name: Build & Test
 on:
-  #push:
-  #  branches:
-  #    - main
-  #    - feature/*
+  push:
   workflow_dispatch:
-    branches:
-      - feature/pipeline
 
 jobs:
-  test:
-    name: Run Tests
+  build:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ci-${{ github.ref }}
+      cancel-in-progress: true
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Set up WireGuard
+      uses: egor-tensin/setup-wireguard@v1
+      with:
+          endpoint: 80.77.112.226:55000
+          endpoint_public_key: ${{ secrets.PFSENSE_PUBLIC_KEY }}
+          ips: 192.168.124.20/24
+          allowed_ips: 192.168.124.0/24, 192.168.123.0/24
+          private_key: ${{ secrets.ENDPOINT_GITHUB_PRIVATE_KEY }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+    - name: Update resolv.conf
+      run: |
+          echo "nameserver 192.168.123.2" | sudo tee /etc/resolv.conf > /dev/null
+          echo "nameserver 8.8.8.8" | sudo tee -a /etc/resolv.conf > /dev/null
+          echo "search knowledgeseed.local" | sudo tee -a /etc/resolv.conf > /dev/null
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
+    - name: Set up Docker with insecure registry
+      run: |
+        echo '{"insecure-registries": ["kseed-docker1.knowledgeseed.local:3000"]}' | sudo tee /etc/docker/daemon.json
+        sudo systemctl restart docker
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DUSERNAME }}
-          password: ${{ secrets.DPASSWORD }}
+    - uses: actions/checkout@v3
 
-      - name: Start services with Docker Compose
-        run: |
-          docker-compose -f docker-compose.yaml up -d
-        working-directory: ./tests_integration_airflow
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.10"
 
-      - name: Inject secrets into config.ini
-        run: |
-          sed -i "s/address=.*/address=${{ secrets.ADDRESS }}/" example/config_example.ini
-          sed -i "s/port=.*/port=${{ secrets.PORT }}/" example/config_example.ini
-          sed -i "s/user=.*/user=${{ secrets.USERNAME }}/" example/config_example.ini
-          sed -i "s/ssl=.*/user=${{ secrets.SSL }}/" example/config_example.ini
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements-dev.txt
+        pip install pytest
+        python -m build
 
-      - name: Run tests
-        run: |
-          python example/check_connectivity.py
-
-      - name: Stop and remove containers
-        if: always()
-        run: |
-          docker-compose -f docker-compose.yaml down
-        working-directory: ./tests_integration_airflow
-
-  #build:
-  #  name: Build Package
-  #  runs-on: ubuntu-latest
-  #  needs: test # Only runs if tests pass
-
-  #  steps:
-  #    - name: Checkout code
-  #      uses: actions/checkout@v4
-
-  #    - name: Build package
-  #      run: |
-  #        python setup.py sdist bdist_wheel
+    - name: Run unit tests
+      run: |
+        cd tests
+        echo "Running unit tests...'
+        pytest test_unit.py
