--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "tm1_bedrock_py"
-version = "0.4.1"
+dynamic = ["version"]
 authors = [
   { name="Example Author", email="author@example.com" },
 ]
@@ -17,15 +17,21 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "TM1py",
-    "mdxpy",
-    "pandas",
-    "json_logging",
-    "sqlalchemy"
+    "TM1py>=2.1, <3.0",
+    "pandas>=2.2.3, <3.0.0",
+    "json_logging>=1.3.0, <2.0.0",
+    "numpy>=2.2.3, <2.0.0",
+    "sqlalchemy>=2.0.39, <3.0.0"
 ]
 
 [project.optional-dependencies]
-dev = ["build", "pytest", "parametrize_from_file", "apache_airflow", "airflow_provider_tm1"]
+dev = [
+    "parametrize_from_file==0.20.0,<1.0.0",
+    "pytest==8.3.4,<9.0.0",
+    "apache_airflow==2.10.5,<3.0.0",
+    "build==1.2.2.post1,<2.0.0",
+    "airflow_provider_tm1==0.3.0,<1.0.0"
+]
 
 [tool.setuptools]
 packages = ["TM1_bedrock_py"]
