--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-TM1py==2.1,<3.0
-pandas==2.2.3,<3.0.0
-json_logging==1.3.0,<2.0.0
-numpy==2.2.3,<3.0.0
-sqlalchemy==2.0.39,<3.0.0
+TM1py>=2.1,<3.0
+pandas>=2.2.3,<3.0.0
+json_logging>=1.3.0,<2.0.0
+numpy>=2.2.3,<3.0.0
+sqlalchemy>=2.0.39,<3.0.0
