--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -3,6 +3,18 @@ on:
   push:
   workflow_dispatch:
 
+env:
+  TM1_ADDRESS: ${{ secrets.TM1_ADDRESS }}
+  TM1_PORT: ${{ secrets.TM1_PORT }}
+  TM1_USER: ${{ secrets.TM1_USER }}
+  TM1_SSL: ${{ secrets.TM1_SSL }}
+  SQL_HOST: ${{ secrets.SQL_HOST }}
+  SQL_PORT: ${{ secrets.SQL_PORT }}
+  SQL_USER: ${{ secrets.SQL_USER }}
+  SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
+  SQL_CONN_TYPE: ${{ secrets.SQL_CONN_TYPE }}
+  SQL_DB: ${{ secrets.SQL_DB }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
