--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -56,6 +56,15 @@ jobs:
         pip install -r requirements-dev.txt
         python -m build
 
+    - name: Install mssql server
+      run: |
+        curl -sSL https://packages.microsoft.com/keys/microsoft.asc | tee /etc/apt/trusted.gpg.d/microsoft.asc > /dev/null
+        curl -sSL https://packages.microsoft.com/config/ubuntu/22.04/prod.list | tee /etc/apt/sources.list.d/mssql-release.list > /dev/null
+        apt-get update
+        apt-get install -y mssql-tools18 unixodbc-dev sqlcmd
+        apt-get clean
+        echo 'export PATH="$PATH:/opt/mssql-tools18/bin"' >> /etc/profile.d/mssql.sh
+
     - name: Run unit tests
       run: |
         cd tests
