--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -56,14 +56,16 @@ jobs:
         pip install -r requirements-dev.txt
         python -m build
 
-    - name: Install mssql server
+    - name: Install UnixODBC and required packages
       run: |
-        curl -sSL https://packages.microsoft.com/keys/microsoft.asc | sudo tee /etc/apt/trusted.gpg.d/microsoft.asc > /dev/null
-        curl -sSL https://packages.microsoft.com/config/ubuntu/22.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list > /dev/null
-        apt-get update
-        apt-get install -y mssql-tools18 unixodbc-dev sqlcmd
-        apt-get clean
-        echo 'export PATH="$PATH:/opt/mssql-tools18/bin"' >> /etc/profile.d/mssql.sh
+        sudo apt-get update
+        sudo apt-get install -y unixodbc-dev curl gnupg2
+        
+        # Install Microsoft ODBC Driver for SQL Server
+        curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+        curl https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
+        sudo apt-get update
+        sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18
 
     - name: Run unit tests
       run: |
