--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -61,11 +61,11 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y unixodbc-dev curl gnupg2
         
-        # Install Microsoft ODBC Driver for SQL Server
+        # Install the Microsoft ODBC Driver 17 for SQL Server
         curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
         curl https://packages.microsoft.com/config/ubuntu/$(lsb_release -rs)/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
         sudo apt-get update
-        sudo ACCEPT_EULA=Y apt-get install -y msodbcsql18
+        sudo ACCEPT_EULA=Y apt-get install -y msodbcsql17
 
     - name: Run unit tests
       run: |
