--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -21,8 +21,8 @@ jobs:
          python -m pip install --upgrade pip
          pip install build twine
 
-      #- name: Update version with release tag
-      #  run: VERSION="${{ github.event.release.tag_name }}" python -c "from TM1_bedrock_py.__init__ import update_version; update_version()"
+      - name: Update version with release tag
+        run: VERSION="${{ github.event.release.tag_name }}" python -c "from TM1_bedrock_py.__init__ import update_version; update_version()"
 
       - name: Build
         run: python -m build
