--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Install build dependencies
         run: |
          python -m pip install --upgrade pip
-         pip install build twine
+         pip install build twine json_logging
 
       - name: Update version with release tag
-        run: VERSION="${{ github.event.release.tag_name }}" python -c "from TM1_bedrock_py.__init__ import update_version; update_version()"
+        run: python -c "from TM1_bedrock_py.__init__ import update_version; update_version('${{ github.event.release.tag_name }}')"
 
       - name: Build
         run: python -m build
