--- a/tests/config.ini
+++ b/tests/config.ini
@@ -12,3 +12,10 @@ username=admin
 password=apple
 connection_type=mssql
 database=HRDEMO
+
+[testbench]
+address=dev.knowledgeseed.local
+port=5379
+user=admin
+password=
+ssl=False
